[tool.poetry]
name = "check-alembic"
version = "0.1.0"
description = "project for check using alembic with sqlalchemy"
authors = ["smapl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
